# ZedScript

./: Cargo.toml  README.md
src/: league_api.rs  lib.rs  riot_api.rs
src/api_structs/: lol_account.rs  lol_api_key.rs  lol_game.rs  lol_match.rs  lol_match_list.rs  lol_participant.rs  lol_region.rs
src/api_structs/champion/: lol_champion_info.rs
src/api_structs/champion_mastery/: lol_champion_mastery_dto.rs
src/api_structs/clash/: lol_team_dto.rs  lol_tournament_dto.rs
src/api_structs/league/: lol_league_entry_dto.rs  lol_league_item_dto.rs  lol_league_list_dto.rs  lol_mini_series_dto.rs
src/api_structs/match_V4/: lol_match_dto.rs  lol_match_list_dto.rs  lol_match_timeline_dto.rs
src/api_structs/spectator/: lol_banned_champion.rs  lol_current_game_info.rs  lol_featured_games.rs  lol_observer.rs
src/api_structs/status/: lol_shard_data.rs
src/api_structs/summoner/: lol_summoner_dto.rs
src/api_structs/tournament/: lol_lobby_event_dto_wrapper.rs  lol_tournament_code_dto.rs
src/league/: league_url.rs
src/util/: http_client.rs  http_error.rs  http_response.rs
tests/: league_account_test.rs  league_api_test.rs  lol_api_key_test.rs  lol_region_test.rs
