[package]
name = "zed_script"
version = "0.1.0"
authors = ["Lionel Bergen <Lionelbergen@live.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"